added glowing ambition mix

--- a/index.html
+++ b/index.html
@@ -15,11 +15,50 @@
     <nav>
       <a href="mailto:vulalaza@gmail.com">Say Hi!</a>
       <a href="https://www.buymeacoffee.com/lazar.todorovic">Buy me ☕</a>
+      <a href="https://www.instagram.com/jazar_todorovic">Instagram</a>
+      <a href="https://www.mixcloud.com/dj-3maj">Mixcloud</a>
+      <a href="https://soundcloud.com/sablast">Soundcloud</a>
     </nav>
   </header>
 
   <main>
-      <h2>Hello, World!</h2>
+    <h2>DJ 3maj</h2>
+    <article>
+      <h3>Glowing Ambition</h3>
+      <img class="mix-image" src="./assets/images/disco-square.jpg" alt="Black and white photo of people dancing">
+      <figure>
+        <figcaption>Listen to <a href="https://www.mixcloud.com/dj-3maj/mister-magic-dj-3maj-mix/" target="_blank"> Glowing Ambition</a> by DJ 3maj:</figcaption>
+        <audio controls controlsList="nodownload">
+          <source src="./assets/audio/Glowing Ambition - DJ 3maj MIX.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+        </audio>
+      </figure>
+      
+      <p>Tracklist:</p>
+      <ol>
+        <li>Mister Magic - Grover Washington</li>
+        <li>Mr. Magic ( Through The Smoke ) - Amy Winehouse</li>
+        <li>Nautilus - Bob James</li>
+        <li>Too High - Stevie Wonder</li>
+        <li>It's All Imagination - Experience Unlimited</li>
+        <li>I Believe in Miracles - The Jackson Sisters</li>
+        <li>Movin' in the Right Direction - Steve Parks</li>
+        <li>To Prove My Love - Ned Doheny</li>
+        <li>Getaway - Earth, Wind & Fire</li>
+        <li>Good Times - Chic</li>
+        <li>Blame It on the Boogie - The Jacksons</li>
+        <li>Number One ( Instrumental ) - Patrice Rushen</li>
+        <li>Clouds - Chaka Khan</li>
+        <li>Running Away - Roy Ayers</li>
+        <li>Do I Do - Stevie Wonder</li>
+        <li>Boogie Nights - Heatwave</li>
+        <li>Could Heaven Ever Be Like This - Idris Muhammad</li>
+        <li>Life On Mars - Dexter Wansel</li>
+        <li>Hooked Up - Jamiroquai</li>
+        <li>Glide - Pleasure</li>
+      </ol>
+    </article>
+      
   </main>
 
   <footer>
