--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
 <body>
   <header>
     <nav>
-      <a href="mailto:vulalaza@gmail.com">Say Hi!</a>
-      <a href="https://www.buymeacoffee.com/lazar.todorovic">Buy me ☕</a>
       <a href="https://www.instagram.com/jazar_todorovic">Instagram</a>
       <a href="https://www.mixcloud.com/dj-3maj">Mixcloud</a>
       <a href="https://soundcloud.com/sablast">Soundcloud</a>
@@ -62,7 +60,9 @@
   </main>
 
   <footer>
-
+      <nav>
+        <a href="https://www.buymeacoffee.com/lazar.todorovic">Buy me ☕</a>
+      </nav>
   </footer>
 </body>
 </html>
