added alien mix

--- a/index.html
+++ b/index.html
@@ -22,6 +22,49 @@
 
   <main>
     <h2>DJ 3maj</h2>
+
+    <article>
+      <h3>Beyond space, time and scale; Without origin, destination and ending</h3>
+      <img class="mix-image" src="./assets/images/black and white space city.jpg" alt="Black and white photo of a space station">
+      <figure>
+        <figcaption>Listen to <a href="https://www.mixcloud.com/dj-3maj/beyond-space-time-and-scale-without-origin-destination-and-ending-dj-3maj-mix/" target="_blank"> "Beyond space, time and scale; Without origin, destination and ending"</a> by DJ 3maj:</figcaption>
+        <audio controls controlsList="nodownload">
+          <source src="./assets/audio/alien - dj 3maj mix.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+        </audio>
+      </figure>
+      
+      <p>Experimental mix recorded live that tries to place our humanity in this mysterious cosmos.</p>
+      <p>Samples used:</p>
+      <ol>
+        <li>Interstellar - Do Not Go Gentle Into That Good Night</li>
+        <li>Ruby My Dear - Mezzotinto</li>
+        <li>Ant-Man Movie - Ant-man Goes To The Quantum Realm</li>
+        <li>Qebrµs - ⊶⊚⊖⬚⊟⊑∷༜⊚༜∷⊒⊞⬚⊖⊚⊷</li>
+        <li>Jacob Collier - Clarity</li>
+        <li>Doctor Strange Movie - Open your eye</li>
+        <li>Amon Tobin - Journeyman</li>
+        <li>The Matrix Movie - Neo Wakes Up In the Real World</li>
+        <li>Filmmaker - Bot Cells</li>
+        <li>Area 51 Phone call on a radio show</li>
+        <li>Noisia - Collider</li>
+        <li>Annihilation movie - The Alien</li>
+        <li>Tron Legacy - Rectifier</li>
+        <li>War of the Worlds - The Eve of The War</li>
+        <li>Alien Isolation Game - Enter the Nest</li>
+        <li>Interstellar - Landing in the Tesseract scene</li>
+        <li>Roisin Murphy - Simulation</li>
+        <li>Amon Tobin - Red Moon</li>
+        <li>Tim Hecker - Stab Variation</li>
+        <li>Interstellar - The Wormhole</li>
+        <li>Sergej Rachmaninoff - Prelude In G minor (Transcription by G.H. Federlein )</li>
+        <li>Carl Sagan - Pale Blue Dot</li>
+        <li>Gustav Holst - Neptune</li>
+        <li>Voyager Golden Record - Greetings From Earth</li>
+        <li>Tim Hecker - Radiance</li>
+      </ol>
+    </article>
+
     <article>
       <h3>Glowing Ambition</h3>
       <img class="mix-image" src="./assets/images/disco-square.jpg" alt="Black and white photo of people dancing">
