added yt channel link to nav

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <a href="https://www.instagram.com/jazar_todorovic">Instagram</a>
       <a href="https://www.mixcloud.com/dj-3maj">Mixcloud</a>
       <a href="https://soundcloud.com/sablast">Soundcloud</a>
+      <a href="https://www.youtube.com/channel/UCV0Ct2K8UEzcAM_uzePhpJA">YouTube</a>
     </nav>
   </header>
 
