added link tree to footer

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
   <footer>
       <nav>
         <a href="https://www.buymeacoffee.com/lazar.todorovic">Buy me ☕</a>
+        <a href="https://linktr.ee/dj_3maj">Link tree</a>
       </nav>
   </footer>
 </body>
