--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="favicon.ico">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0TGLM00G2L"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-0TGLM00G2L');
+  </script>
 </head>
 <body>
   <header>
