--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()"/>
-  <title>DJ 3maj</title>
+  <title>DJ 3maj's Mixtapes</title>
+  <meta name="description" content="DJ 3maj's Mixtapes is where you can find all of his mixtapes and their tracklists.">
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
@@ -29,10 +30,11 @@
   </header>
 
   <main>
-    <h2>DJ 3maj</h2>
+    <h1>DJ 3maj</h2>
 
     <article>
-      <h3>Beyond space, time and scale; Without origin, destination and ending</h3>
+      <h2>Beyond space, time and scale; Without origin, destination and ending</h3>
+      <p>Experimental mix recorded live that tries to place our humanity in this mysterious cosmos.</p>
       <img class="mix-image" src="./assets/images/black and white space city.jpg" alt="Black and white photo of a space station">
       <figure>
         <figcaption>Listen to <a href="https://www.mixcloud.com/dj-3maj/beyond-space-time-and-scale-without-origin-destination-and-ending-dj-3maj-mix/" target="_blank"> "Beyond space, time and scale; Without origin, destination and ending"</a> by DJ 3maj:</figcaption>
@@ -41,9 +43,7 @@
         Your browser does not support the audio element.
         </audio>
       </figure>
-      
-      <p>Experimental mix recorded live that tries to place our humanity in this mysterious cosmos.</p>
-      <p>Samples used:</p>
+      <h3>Samples used:</h3>
       <ol>
         <li>Interstellar - Do Not Go Gentle Into That Good Night</li>
         <li>Ruby My Dear - Mezzotinto</li>
@@ -74,7 +74,7 @@
     </article>
 
     <article>
-      <h3>Glowing Ambition</h3>
+      <h2>Glowing Ambition</h3>
       <img class="mix-image" src="./assets/images/disco-square.jpg" alt="Black and white photo of people dancing">
       <figure>
         <figcaption>Listen to <a href="https://www.mixcloud.com/dj-3maj/mister-magic-dj-3maj-mix/" target="_blank"> Glowing Ambition</a> by DJ 3maj:</figcaption>
@@ -84,7 +84,7 @@
         </audio>
       </figure>
       
-      <p>Tracklist:</p>
+      <h3>Tracklist:</h3>
       <ol>
         <li>Mister Magic - Grover Washington</li>
         <li>Mr. Magic ( Through The Smoke ) - Amy Winehouse</li>
