--- a/index.html
+++ b/index.html
@@ -32,6 +32,32 @@
   <main>
     <h1>DJ 3maj</h2>
 
+
+      <article>
+        <h2>Hali Gali</h3>
+        <p class="about">“HALI GALI is a personal approach to the scene, a response to a stalemate, a non-existent space, and infrastructure that everyone complains about. It is a forest fire that is spreading uncontrollably and showing the middle finger to all who hate. A crazy ride of diversity that annoys your neighbors. HALI GALI is a fair of art and energy that we live.”</p>
+        <img class="mix-image" src="./assets/images/hali gali tuti fruti.jpg" alt="Guy carried by the crowd at a Hali Gali concert.">
+        <figure>
+          <figcaption>Listen to <a href="https://www.mixcloud.com/dj-3maj/hali-gali-dj-3maj-mix/" target="_blank"> "Hali Gali"</a> by DJ 3maj:</figcaption>
+          <audio controls controlsList="nodownload">
+            <source src="./assets/audio/domaca scena mixtape v2.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+          </audio>
+        </figure>
+        <h3>New alternative in Belgrade:</h3>
+        <ul>
+          <li><a href="https://repetitor.bandcamp.com/">Repetitor</a></li>
+          <li><a href=" https://prototip.bandcamp.com/">Prototip</a></li>
+          <li><a href=" https://johanbrauer.bandcamp.com/">Johanbrauer</a></li>
+          <li><a href=" https://vizeljbend.bandcamp.com/">Vizelj</a></li>
+          <li><a href=" https://koikoi.bandcamp.com/">Koikoi</a></li>
+          <li><a href=" https://sajzerbiterlemon.bandcamp.com/">Sajzerbiterlemon</a></li>
+          <li><a href=" https://gazorpazorp1.bandcamp.com/">Gazorpazorp</a></li>
+          <li><a href=" https://dogsinkavala.bandcamp.com/">Dogs in Kavala</a></li>
+        </ul>
+        <p>Checkout Hali Gali <a href="https://www.youtube.com/watch?v=DkUVX2pKw2o">mockumentary</a> and <a href="https://haligali.bandcamp.com/releases">compilation</a>.</p>
+      </article>
+
     <article>
       <h2>Beyond space, time and scale; Without origin, destination and ending</h3>
       <p>Experimental mix recorded live that tries to place our humanity in this mysterious cosmos.</p>
