--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
   <main>
     <h1>DJ 3maj</h2>
 
+      <article>
+        <h2>Waking Up</h3>
+        <p class="about">This is the music I play to start my day. Good vibes and gradual build-up of energy. Enjoy!</p>
+        <img class="mix-image" src="./assets/images/sunrise in zemun.jpg" alt="Sunrise in Zemun, Belgrade, Serbia.">
+        <figure>
+          <figcaption>Listen to <a href="https://www.mixcloud.com/dj-3maj/waking-up-dj-3maj-mix/" target="_blank"> "Waking Up"</a> by DJ 3maj:</figcaption>
+          <audio controls controlsList="nodownload">
+            <source src="./assets/audio/waking up - dj 3maj mix.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+          </audio>
+        </figure>
+      </article>
 
       <article>
         <h2>Hali Gali</h3>
