added tracklist for waking up

--- a/index.html
+++ b/index.html
@@ -43,6 +43,24 @@
           Your browser does not support the audio element.
           </audio>
         </figure>
+        <h3>Tracklist:</h3>
+        <ol>
+          <li>Everybody Loves The Sunshine [feat. José James] by Takuya Kuroda</li>
+          <li>Morning Walk by Brian Culbertson</li>
+          <li>Ljubav što smo stvorili by irieFM</li>
+          <li>Retold by Nate Smith</li>
+          <li>People by Experience Unlimited</li>
+          <li>By The Time I Get To Phoenix by The Vast Majority</li>
+          <li>ABC by The Jacksons</li>
+          <li>Move That Body by CHANCE デラソウル</li>
+          <li>Want Ads by Soda Machine</li>
+          <li>It's Your Thing by The Isley Brothers</li>
+          <li>Soul Sister by Heatwave</li>
+          <li>Superstition by Stevie Wonder</li>
+          <li>Shining Star by Earth, Wind & Fire</li>
+          <li>I Want To Take You Higher by Sly & The Family Stone</li>
+          <li>Sing a Simple Song by Sly & The Family Stone</li>
+        </ol>
       </article>
 
       <article>
