future funk mixtape

--- a/index.html
+++ b/index.html
@@ -33,6 +33,38 @@
     <h1>DJ 3maj</h2>
 
       <article>
+        <h2>Fabulous Future Funk Freakout</h3>
+        <p class="about">Inspired by Daft Punk's Discovery and Homework albums.</p>
+        <img class="mix-image" src="./assets/images/dragon vaporwave square.jpg" alt="Dragon over a floating city ilustration in vaporwave aestetic.">
+        <figure>
+          <figcaption>Listen to <a href="https://www.mixcloud.com/dj-3maj/future-funk-dj-3maj-mix/" target="_blank">"Fabulous Future Funk Freakout"</a> by DJ 3maj:</figcaption>
+          <audio controls controlsList="nodownload">
+            <source src="./assets/audio/Fabulous Future Funk Freakout - Dj 3maj MIX.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+          </audio>
+        </figure>
+        <p>Shoutout to all of the talented musicians featured in this mix:</p>
+        <ul>
+          <li><a href="soundcloud.com/vanilla">soundcloud.com/vanilla</a></li>
+          <li><a href="soundcloud.com/shadleypeterson">soundcloud.com/shadleypeterson</a></li>
+          <li><a href="soundcloud.com/capecoral">soundcloud.com/capecoral</a></li> 
+          <li><a href="soundcloud.com/doktorplekter">soundcloud.com/doktorplekter</a></li> 
+          <li><a href="soundcloud.com/risonam">soundcloud.com/risonam</a></li> 
+          <li><a href="soundcloud.com/ev-exi">soundcloud.com/ev-exi</a></li> 
+          <li><a href="soundcloud.com/tendencies">soundcloud.com/tendencies</a></li> 
+          <li><a href="soundcloud.com/mrprouxdomine">soundcloud.com/mrprouxdomine</a></li> 
+          <li><a href="soundcloud.com/acidente">soundcloud.com/acidente</a></li> 
+          <li><a href="soundcloud.com/flamingosis">soundcloud.com/flamingosis</a></li> 
+          <li><a href="soundcloud.com/aritusmusic">soundcloud.com/aritusmusic</a></li> 
+          <li><a href="soundcloud.com/soliterre">soundcloud.com/soliterre</a></li> 
+          <li><a href="soundcloud.com/thoughts-7">soundcloud.com/thoughts-7</a></li> 
+          <li><a href="soundcloud.com/season-team">soundcloud.com/season-team</a></li> 
+          <li><a href="soundcloud.com/yunibasaruwa">soundcloud.com/yunibasaruwa</a></li> 
+          <li><a href="soundcloud.com/supersex420">soundcloud.com/supersex420</a></li> 
+        </ul>
+      </article>
+
+      <article>
         <h2>Waking Up</h3>
         <p class="about">This is the music I play to start my day. Good vibes and gradual build-up of energy. Enjoy!</p>
         <img class="mix-image" src="./assets/images/sunrise in zemun.jpg" alt="Sunrise in Zemun, Belgrade, Serbia.">
