credits to illustrator

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
           <li><a href="soundcloud.com/yunibasaruwa">soundcloud.com/yunibasaruwa</a></li> 
           <li><a href="soundcloud.com/supersex420">soundcloud.com/supersex420</a></li> 
         </ul>
+        <p>Awesome illustration was done by <a href="https://surudenise.com">Denise Rashidi</a>.</p>
       </article>
 
       <article>
