styling and responsivness

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   </script>
 </head>
 <body>
+  
   <header>
+    <h1 class="title">DJ 3maj's Mixtapes</h1>
     <nav>
       <a href="https://www.instagram.com/jazar_todorovic">Instagram</a>
       <a href="https://www.mixcloud.com/dj-3maj">Mixcloud</a>
@@ -30,9 +32,7 @@
   </header>
 
   <main>
-    <h1>DJ 3maj</h2>
-
-      <article>
+      <article class="future-funk">
         <h2>Fabulous Future Funk Freakout</h3>
         <p class="about">Inspired by Daft Punk's Discovery and Homework albums.</p>
         <img class="mix-image" src="./assets/images/dragon vaporwave square.jpg" alt="Dragon over a floating city ilustration in vaporwave aestetic.">
@@ -65,7 +65,7 @@
         <p>Awesome illustration was done by <a href="https://surudenise.com">Denise Rashidi</a>.</p>
       </article>
 
-      <article>
+      <article class="waking-up">
         <h2>Waking Up</h3>
         <p class="about">This is the music I play to start my day. Good vibes and gradual build-up of energy. Enjoy!</p>
         <img class="mix-image" src="./assets/images/sunrise in zemun.jpg" alt="Sunrise in Zemun, Belgrade, Serbia.">
@@ -122,7 +122,7 @@
       </article>
 
     <article>
-      <h2>Beyond space, time and scale; Without origin, destination and ending</h3>
+      <h2>Beyond space, time and scale<br>Without origin, destination and ending</h3>
       <p>Experimental mix recorded live that tries to place our humanity in this mysterious cosmos.</p>
       <img class="mix-image" src="./assets/images/black and white space city.jpg" alt="Black and white photo of a space station">
       <figure>
@@ -202,8 +202,7 @@
 
   <footer>
       <nav>
-        <a href="https://www.buymeacoffee.com/lazar.todorovic">Buy me ☕</a>
-        <a href="https://linktr.ee/dj_3maj">Link tree</a>
+        <a href="https://www.buymeacoffee.com/lazar.todorovic">Buy me a cup of ☕</a>
       </nav>
   </footer>
 </body>
