switch from mixcloud to soundcloud

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p class="about">Inspired by Daft Punk's Discovery and Homework albums.</p>
         <img class="mix-image" src="./assets/images/dragon vaporwave square.jpg" alt="Dragon over a floating city ilustration in vaporwave aestetic.">
         <figure>
-          <figcaption>Listen to <a href="https://www.mixcloud.com/dj-3maj/future-funk-dj-3maj-mix/" target="_blank">"Fabulous Future Funk Freakout"</a> by DJ 3maj:</figcaption>
+          <figcaption>Listen to <a href="https://soundcloud.com/sablast/fabulous-future-funk-freakout-dj-3maj-mix" target="_blank">"Fabulous Future Funk Freakout"</a> by DJ 3maj:</figcaption>
           <audio controls controlsList="nodownload">
             <source src="./assets/audio/Fabulous Future Funk Freakout - Dj 3maj MIX.mp3" type="audio/mpeg">
           Your browser does not support the audio element.
@@ -70,7 +70,7 @@
         <p class="about">This is the music I play to start my day. Good vibes and gradual build-up of energy. Enjoy!</p>
         <img class="mix-image" src="./assets/images/sunrise in zemun.jpg" alt="Sunrise in Zemun, Belgrade, Serbia.">
         <figure>
-          <figcaption>Listen to <a href="https://www.mixcloud.com/dj-3maj/waking-up-dj-3maj-mix/" target="_blank"> "Waking Up"</a> by DJ 3maj:</figcaption>
+          <figcaption>Listen to <a href="https://soundcloud.com/sablast/waking-up-dj-3maj-mix" target="_blank"> "Waking Up"</a> by DJ 3maj:</figcaption>
           <audio controls controlsList="nodownload">
             <source src="./assets/audio/waking up - dj 3maj mix.mp3" type="audio/mpeg">
           Your browser does not support the audio element.
@@ -101,7 +101,7 @@
         <p class="about">“HALI GALI is a personal approach to the scene, a response to a stalemate, a non-existent space, and infrastructure that everyone complains about. It is a forest fire that is spreading uncontrollably and showing the middle finger to all who hate. A crazy ride of diversity that annoys your neighbors. HALI GALI is a fair of art and energy that we live.”</p>
         <img class="mix-image" src="./assets/images/hali gali tuti fruti.jpg" alt="Guy carried by the crowd at a Hali Gali concert.">
         <figure>
-          <figcaption>Listen to <a href="https://www.mixcloud.com/dj-3maj/hali-gali-dj-3maj-mix/" target="_blank"> "Hali Gali"</a> by DJ 3maj:</figcaption>
+          <figcaption>Listen to <a href="https://soundcloud.com/sablast/hali-gali-dj-3maj-mix" target="_blank"> "Hali Gali"</a> by DJ 3maj:</figcaption>
           <audio controls controlsList="nodownload">
             <source src="./assets/audio/domaca scena mixtape v2.mp3" type="audio/mpeg">
           Your browser does not support the audio element.
@@ -126,7 +126,7 @@
       <p>Experimental mix recorded live that tries to place our humanity in this mysterious cosmos.</p>
       <img class="mix-image" src="./assets/images/black and white space city.jpg" alt="Black and white photo of a space station">
       <figure>
-        <figcaption>Listen to <a href="https://www.mixcloud.com/dj-3maj/beyond-space-time-and-scale-without-origin-destination-and-ending-dj-3maj-mix/" target="_blank"> "Beyond space, time and scale; Without origin, destination and ending"</a> by DJ 3maj:</figcaption>
+        <figcaption>Listen to <a href="https://soundcloud.com/sablast/beyond-space-time-and-scale-without-origin-destination-and-ending-dj-3maj-mix" target="_blank"> "Beyond space, time and scale; Without origin, destination and ending"</a> by DJ 3maj:</figcaption>
         <audio controls controlsList="nodownload">
           <source src="./assets/audio/alien - dj 3maj mix.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
