uni of applied arts

--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
   </header>
 
   <main>
+    <article>
+      <h2>For the girls that go to The University of Applied Arts</h3>
+      <p class="about">Inspired by the good time I had on a boat under a glowing bridge in Belgrade.</p>
+      <img class="mix-image" src="./assets/images/rose on a golden coin.jpg" alt="Rose on a golden coin.">
+      <figure>
+        <figcaption>Listen to <a href="https://soundcloud.com/sablast/for-the-girls-that-go-to-the-university-of-applied-arts-dj-3maj-mix" target="_blank">"For the girls that go to The University of Applied Arts"</a> by DJ 3maj:</figcaption>
+        <audio controls controlsList="nodownload">
+          <source src="./assets/audio/For the girls that go to The University of Applied Arts - DJ 3maj MIX.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+        </audio>
+      </figure>
+    </article>
+
       <article class="future-funk">
         <h2>Fabulous Future Funk Freakout</h3>
         <p class="about">Inspired by Daft Punk's Discovery and Homework albums.</p>
