--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
     gtag('config', 'G-0TGLM00G2L');
+    function listenOnPlay(name) {
+      gtag('event', 'play', {
+        'event_category': 'audio',
+        'event_label': name
+      });
+    }
   </script>
 </head>
 <body>
@@ -44,7 +50,7 @@
       <img class="mix-image" src="./assets/images/rose on a golden coin.jpg" alt="Rose on a golden coin.">
       <figure>
         <figcaption>Listen to <a href="https://soundcloud.com/sablast/for-the-girls-that-go-to-the-university-of-applied-arts-dj-3maj-mix" target="_blank">"For the girls that go to The University of Applied Arts"</a> by DJ 3maj:</figcaption>
-        <audio controls controlsList="nodownload">
+        <audio onplay="listenOnPlay('soundcloud.com/sablast/for-the-girls-that-go-to-the-university-of-applied-arts-dj-3maj-mix')" controls controlsList="nodownload">
           <source src="./assets/audio/For the girls that go to The University of Applied Arts - DJ 3maj MIX.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
         </audio>
@@ -57,7 +63,7 @@
         <img class="mix-image" src="./assets/images/dragon vaporwave square.jpg" alt="Dragon over a floating city ilustration in vaporwave aestetic.">
         <figure>
           <figcaption>Listen to <a href="https://soundcloud.com/sablast/fabulous-future-funk-freakout-dj-3maj-mix" target="_blank">"Fabulous Future Funk Freakout"</a> by DJ 3maj:</figcaption>
-          <audio controls controlsList="nodownload">
+          <audio onplay="listenOnPlay('soundcloud.com/sablast/fabulous-future-funk-freakout-dj-3maj-mix')" controls controlsList="nodownload">
             <source src="./assets/audio/Fabulous Future Funk Freakout - Dj 3maj MIX.mp3" type="audio/mpeg">
           Your browser does not support the audio element.
           </audio>
@@ -90,7 +96,7 @@
         <img class="mix-image" src="./assets/images/sunrise in zemun.jpg" alt="Sunrise in Zemun, Belgrade, Serbia.">
         <figure>
           <figcaption>Listen to <a href="https://soundcloud.com/sablast/waking-up-dj-3maj-mix" target="_blank"> "Waking Up"</a> by DJ 3maj:</figcaption>
-          <audio controls controlsList="nodownload">
+          <audio onplay="listenOnPlay('soundcloud.com/sablast/waking-up-dj-3maj-mix')" controls controlsList="nodownload">
             <source src="./assets/audio/waking up - dj 3maj mix.mp3" type="audio/mpeg">
           Your browser does not support the audio element.
           </audio>
@@ -121,7 +127,7 @@
         <img class="mix-image" src="./assets/images/hali gali tuti fruti.jpg" alt="Guy carried by the crowd at a Hali Gali concert.">
         <figure>
           <figcaption>Listen to <a href="https://soundcloud.com/sablast/hali-gali-dj-3maj-mix" target="_blank"> "Hali Gali"</a> by DJ 3maj:</figcaption>
-          <audio controls controlsList="nodownload">
+          <audio onplay="listenOnPlay('soundcloud.com/sablast/hali-gali-dj-3maj-mix')" controls controlsList="nodownload">
             <source src="./assets/audio/domaca scena mixtape v2.mp3" type="audio/mpeg">
           Your browser does not support the audio element.
           </audio>
@@ -146,7 +152,7 @@
       <img class="mix-image" src="./assets/images/black and white space city.jpg" alt="Black and white photo of a space station">
       <figure>
         <figcaption>Listen to <a href="https://soundcloud.com/sablast/beyond-space-time-and-scale-without-origin-destination-and-ending-dj-3maj-mix" target="_blank"> "Beyond space, time and scale; Without origin, destination and ending"</a> by DJ 3maj:</figcaption>
-        <audio controls controlsList="nodownload">
+        <audio onplay="listenOnPlay('soundcloud.com/sablast/beyond-space-time-and-scale-without-origin-destination-and-ending-dj-3maj-mix')" controls controlsList="nodownload">
           <source src="./assets/audio/alien - dj 3maj mix.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
         </audio>
@@ -186,7 +192,7 @@
       <img class="mix-image" src="./assets/images/disco-square.jpg" alt="Black and white photo of people dancing">
       <figure>
         <figcaption>Listen to <a href="https://www.mixcloud.com/dj-3maj/mister-magic-dj-3maj-mix/" target="_blank"> Glowing Ambition</a> by DJ 3maj:</figcaption>
-        <audio controls controlsList="nodownload">
+        <audio onplay="listenOnPlay('mixcloud.com/dj-3maj/mister-magic-dj-3maj-mix')" controls controlsList="nodownload">
           <source src="./assets/audio/Glowing Ambition - DJ 3maj MIX.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
         </audio>
