--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
     <h1 class="title">DJ 3maj's Mixtapes</h1>
     <nav>
       <a href="https://www.instagram.com/jazar_todorovic">Instagram</a>
-      <a href="https://www.mixcloud.com/dj-3maj">Mixcloud</a>
-      <a href="https://soundcloud.com/sablast">Soundcloud</a>
+      <a href="https://dj3maj.bandcamp.com/">Bandcamp</a>
       <a href="https://www.youtube.com/channel/UCV0Ct2K8UEzcAM_uzePhpJA">YouTube</a>
+      <a href="https://soundcloud.com/sablast">Soundcloud</a>
+      <a href="https://www.mixcloud.com/dj-3maj">Mixcloud</a>
     </nav>
   </header>
 
@@ -41,7 +42,7 @@
     <article>
       <h2>Luton - I Don't Know, Sweetheart ( DJ 3maj Remix )</h3>
       <img class="mix-image" src="./assets/images/Luton - I don't know, sweetheart ( DJ 3maj remix ) cover photo.jpeg" alt="Man shrugging his shoulders.">
-      <p>Listen on <a href="https://soundcloud.com/sablast/luton-i-dont-know-sweetheart-dj-3maj-remix" target="_blank">soundcloud</a>.</p>
+      <p>Listen on <a href="https://dj3maj.bandcamp.com/track/luton-i-dont-know-sweetheart-dj-3maj-remix" target="_blank">bandcamp</a> or <a href="https://soundcloud.com/sablast/luton-i-dont-know-sweetheart-dj-3maj-remix" target="_blank">soundcloud</a>.</p>
     </article>
     
     <article>
