new remix image

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <main>
     <article>
       <h2>Luton - I Don't Know, Sweetheart ( DJ 3maj Remix )</h3>
-      <img class="mix-image" src="./assets/images/Luton - I don't know, sweetheart ( DJ 3maj remix ) cover photo.jpeg" alt="Man shrugging his shoulders.">
+      <img class="mix-image" src="./assets/images/don draperjpg.jpg" alt="Don Draper in his empty penthouse after his wife left him.">
       <p>Listen on <a href="https://dj3maj.bandcamp.com/track/luton-i-dont-know-sweetheart-dj-3maj-remix" target="_blank">bandcamp</a> or <a href="https://soundcloud.com/sablast/luton-i-dont-know-sweetheart-dj-3maj-remix" target="_blank">soundcloud</a>.</p>
     </article>
     
