open all outgoing links in another tab

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
   <header>
     <h1 class="title">DJ 3maj's Mixtapes</h1>
     <nav>
-      <a href="https://www.instagram.com/jazar_todorovic">Instagram</a>
-      <a href="https://dj3maj.bandcamp.com/">Bandcamp</a>
-      <a href="https://www.youtube.com/channel/UCV0Ct2K8UEzcAM_uzePhpJA">YouTube</a>
-      <a href="https://soundcloud.com/sablast">Soundcloud</a>
-      <a href="https://www.mixcloud.com/dj-3maj">Mixcloud</a>
+      <a href="https://www.instagram.com/jazar_todorovic" target="_blank">Instagram</a>
+      <a href="https://dj3maj.bandcamp.com/" target="_blank">Bandcamp</a>
+      <a href="https://www.youtube.com/channel/UCV0Ct2K8UEzcAM_uzePhpJA" target="_blank">YouTube</a>
+      <a href="https://soundcloud.com/sablast" target="_blank">Soundcloud</a>
+      <a href="https://www.mixcloud.com/dj-3maj" target="_blank">Mixcloud</a>
     </nav>
   </header>
 
@@ -42,7 +42,7 @@
     <article>
       <h2>Luton - I Don't Know, Sweetheart ( DJ 3maj Remix )</h3>
       <img class="mix-image" src="./assets/images/don draperjpg.jpg" alt="Don Draper in his empty penthouse after his wife left him.">
-      <p>Listen on <a href="https://dj3maj.bandcamp.com/track/luton-i-dont-know-sweetheart-dj-3maj-remix" target="_blank">bandcamp</a> or <a href="https://soundcloud.com/sablast/luton-i-dont-know-sweetheart-dj-3maj-remix" target="_blank">soundcloud</a>.</p>
+      <p>Listen on <a href="https://dj3maj.bandcamp.com/track/luton-i-dont-know-sweetheart-dj-3maj-remix" target="_blank">bandcamp</a>, <a href="https://soundcloud.com/sablast/luton-i-dont-know-sweetheart-dj-3maj-remix" target="_blank">soundcloud</a> or <a href="https://www.youtube.com/watch?v=-Dwu1XNMaV8" target="_blank">youtube</a>.</p>
     </article>
     
     <article>
@@ -71,24 +71,24 @@
         </figure>
         <p>Shoutout to all of the talented musicians featured in this mix:</p>
         <ul>
-          <li><a href="soundcloud.com/vanilla">soundcloud.com/vanilla</a></li>
-          <li><a href="soundcloud.com/shadleypeterson">soundcloud.com/shadleypeterson</a></li>
-          <li><a href="soundcloud.com/capecoral">soundcloud.com/capecoral</a></li> 
-          <li><a href="soundcloud.com/doktorplekter">soundcloud.com/doktorplekter</a></li> 
-          <li><a href="soundcloud.com/risonam">soundcloud.com/risonam</a></li> 
-          <li><a href="soundcloud.com/ev-exi">soundcloud.com/ev-exi</a></li> 
-          <li><a href="soundcloud.com/tendencies">soundcloud.com/tendencies</a></li> 
-          <li><a href="soundcloud.com/mrprouxdomine">soundcloud.com/mrprouxdomine</a></li> 
-          <li><a href="soundcloud.com/acidente">soundcloud.com/acidente</a></li> 
-          <li><a href="soundcloud.com/flamingosis">soundcloud.com/flamingosis</a></li> 
-          <li><a href="soundcloud.com/aritusmusic">soundcloud.com/aritusmusic</a></li> 
-          <li><a href="soundcloud.com/soliterre">soundcloud.com/soliterre</a></li> 
-          <li><a href="soundcloud.com/thoughts-7">soundcloud.com/thoughts-7</a></li> 
-          <li><a href="soundcloud.com/season-team">soundcloud.com/season-team</a></li> 
-          <li><a href="soundcloud.com/yunibasaruwa">soundcloud.com/yunibasaruwa</a></li> 
-          <li><a href="soundcloud.com/supersex420">soundcloud.com/supersex420</a></li> 
+          <li><a href="soundcloud.com/vanilla" target="_blank">soundcloud.com/vanilla</a></li>
+          <li><a href="soundcloud.com/shadleypeterson" target="_blank">soundcloud.com/shadleypeterson</a></li>
+          <li><a href="soundcloud.com/capecoral" target="_blank">soundcloud.com/capecoral</a></li> 
+          <li><a href="soundcloud.com/doktorplekter" target="_blank">soundcloud.com/doktorplekter</a></li> 
+          <li><a href="soundcloud.com/risonam" target="_blank">soundcloud.com/risonam</a></li> 
+          <li><a href="soundcloud.com/ev-exi" target="_blank">soundcloud.com/ev-exi</a></li> 
+          <li><a href="soundcloud.com/tendencies" target="_blank">soundcloud.com/tendencies</a></li> 
+          <li><a href="soundcloud.com/mrprouxdomine" target="_blank">soundcloud.com/mrprouxdomine</a></li> 
+          <li><a href="soundcloud.com/acidente" target="_blank">soundcloud.com/acidente</a></li> 
+          <li><a href="soundcloud.com/flamingosis" target="_blank">soundcloud.com/flamingosis</a></li> 
+          <li><a href="soundcloud.com/aritusmusic" target="_blank">soundcloud.com/aritusmusic</a></li> 
+          <li><a href="soundcloud.com/soliterre" target="_blank">soundcloud.com/soliterre</a></li> 
+          <li><a href="soundcloud.com/thoughts-7" target="_blank">soundcloud.com/thoughts-7</a></li> 
+          <li><a href="soundcloud.com/season-team" target="_blank">soundcloud.com/season-team</a></li> 
+          <li><a href="soundcloud.com/yunibasaruwa" target="_blank">soundcloud.com/yunibasaruwa</a></li> 
+          <li><a href="soundcloud.com/supersex420" target="_blank">soundcloud.com/supersex420</a></li> 
         </ul>
-        <p>Awesome illustration was done by <a href="https://surudenise.com">Denise Rashidi</a>.</p>
+        <p>Awesome illustration was done by <a href="https://surudenise.com" target="_blank">Denise Rashidi</a>.</p>
       </article>
 
       <article class="waking-up">
@@ -135,16 +135,16 @@
         </figure>
         <h3>New alternative in Belgrade:</h3>
         <ul>
-          <li><a href="https://repetitor.bandcamp.com/">Repetitor</a></li>
-          <li><a href=" https://prototip.bandcamp.com/">Prototip</a></li>
-          <li><a href=" https://johanbrauer.bandcamp.com/">Johanbrauer</a></li>
-          <li><a href=" https://vizeljbend.bandcamp.com/">Vizelj</a></li>
-          <li><a href=" https://koikoi.bandcamp.com/">Koikoi</a></li>
-          <li><a href=" https://sajzerbiterlemon.bandcamp.com/">Sajzerbiterlemon</a></li>
-          <li><a href=" https://gazorpazorp1.bandcamp.com/">Gazorpazorp</a></li>
-          <li><a href=" https://dogsinkavala.bandcamp.com/">Dogs in Kavala</a></li>
+          <li><a href="https://repetitor.bandcamp.com/" target="_blank">Repetitor</a></li>
+          <li><a href=" https://prototip.bandcamp.com/" target="_blank">Prototip</a></li>
+          <li><a href=" https://johanbrauer.bandcamp.com/" target="_blank">Johanbrauer</a></li>
+          <li><a href=" https://vizeljbend.bandcamp.com/" target="_blank">Vizelj</a></li>
+          <li><a href=" https://koikoi.bandcamp.com/" target="_blank">Koikoi</a></li>
+          <li><a href=" https://sajzerbiterlemon.bandcamp.com/" target="_blank">Sajzerbiterlemon</a></li>
+          <li><a href=" https://gazorpazorp1.bandcamp.com/" target="_blank">Gazorpazorp</a></li>
+          <li><a href=" https://dogsinkavala.bandcamp.com/" target="_blank">Dogs in Kavala</a></li>
         </ul>
-        <p>Checkout Hali Gali <a href="https://www.youtube.com/watch?v=DkUVX2pKw2o">mockumentary</a> and <a href="https://haligali.bandcamp.com/releases">compilation</a>.</p>
+        <p>Checkout Hali Gali <a href="https://www.youtube.com/watch?v=DkUVX2pKw2o" target="_blank">mockumentary</a> and <a href="https://haligali.bandcamp.com/releases" target="_blank">compilation</a>.</p>
       </article>
 
     <article>
@@ -228,7 +228,7 @@
 
   <footer>
       <nav>
-        <a href="https://www.buymeacoffee.com/lazar.todorovic">Buy me a cup of ☕</a>
+        <a href="https://www.buymeacoffee.com/lazar.todorovic" target="_blank">Buy me a cup of ☕</a>
       </nav>
   </footer>
 </body>
