fixed soundcloud links

--- a/index.html
+++ b/index.html
@@ -71,22 +71,22 @@
         </figure>
         <p>Shoutout to all of the talented musicians featured in this mix:</p>
         <ul>
-          <li><a href="soundcloud.com/vanilla" target="_blank">soundcloud.com/vanilla</a></li>
-          <li><a href="soundcloud.com/shadleypeterson" target="_blank">soundcloud.com/shadleypeterson</a></li>
-          <li><a href="soundcloud.com/capecoral" target="_blank">soundcloud.com/capecoral</a></li> 
-          <li><a href="soundcloud.com/doktorplekter" target="_blank">soundcloud.com/doktorplekter</a></li> 
-          <li><a href="soundcloud.com/risonam" target="_blank">soundcloud.com/risonam</a></li> 
-          <li><a href="soundcloud.com/ev-exi" target="_blank">soundcloud.com/ev-exi</a></li> 
-          <li><a href="soundcloud.com/tendencies" target="_blank">soundcloud.com/tendencies</a></li> 
-          <li><a href="soundcloud.com/mrprouxdomine" target="_blank">soundcloud.com/mrprouxdomine</a></li> 
-          <li><a href="soundcloud.com/acidente" target="_blank">soundcloud.com/acidente</a></li> 
-          <li><a href="soundcloud.com/flamingosis" target="_blank">soundcloud.com/flamingosis</a></li> 
-          <li><a href="soundcloud.com/aritusmusic" target="_blank">soundcloud.com/aritusmusic</a></li> 
-          <li><a href="soundcloud.com/soliterre" target="_blank">soundcloud.com/soliterre</a></li> 
-          <li><a href="soundcloud.com/thoughts-7" target="_blank">soundcloud.com/thoughts-7</a></li> 
-          <li><a href="soundcloud.com/season-team" target="_blank">soundcloud.com/season-team</a></li> 
-          <li><a href="soundcloud.com/yunibasaruwa" target="_blank">soundcloud.com/yunibasaruwa</a></li> 
-          <li><a href="soundcloud.com/supersex420" target="_blank">soundcloud.com/supersex420</a></li> 
+          <li><a href="https://soundcloud.com/vanilla" target="_blank">soundcloud.com/vanilla</a></li>
+          <li><a href="https://soundcloud.com/shadleypeterson" target="_blank">soundcloud.com/shadleypeterson</a></li>
+          <li><a href="https://soundcloud.com/capecoral" target="_blank">soundcloud.com/capecoral</a></li> 
+          <li><a href="https://soundcloud.com/doktorplekter" target="_blank">soundcloud.com/doktorplekter</a></li> 
+          <li><a href="https://soundcloud.com/risonam" target="_blank">soundcloud.com/risonam</a></li> 
+          <li><a href="https://soundcloud.com/ev-exi" target="_blank">soundcloud.com/ev-exi</a></li> 
+          <li><a href="https://soundcloud.com/tendencies" target="_blank">soundcloud.com/tendencies</a></li> 
+          <li><a href="https://soundcloud.com/mrprouxdomine" target="_blank">soundcloud.com/mrprouxdomine</a></li> 
+          <li><a href="https://soundcloud.com/acidente" target="_blank">soundcloud.com/acidente</a></li> 
+          <li><a href="https://soundcloud.com/flamingosis" target="_blank">soundcloud.com/flamingosis</a></li> 
+          <li><a href="https://soundcloud.com/aritusmusic" target="_blank">soundcloud.com/aritusmusic</a></li> 
+          <li><a href="https://soundcloud.com/soliterre" target="_blank">soundcloud.com/soliterre</a></li> 
+          <li><a href="https://soundcloud.com/thoughts-7" target="_blank">soundcloud.com/thoughts-7</a></li> 
+          <li><a href="https://soundcloud.com/season-team" target="_blank">soundcloud.com/season-team</a></li> 
+          <li><a href="https://soundcloud.com/yunibasaruwa" target="_blank">soundcloud.com/yunibasaruwa</a></li> 
+          <li><a href="https://soundcloud.com/supersex420" target="_blank">soundcloud.com/supersex420</a></li> 
         </ul>
         <p>Awesome illustration was done by <a href="https://surudenise.com" target="_blank">Denise Rashidi</a>.</p>
       </article>
@@ -136,13 +136,13 @@
         <h3>New alternative in Belgrade:</h3>
         <ul>
           <li><a href="https://repetitor.bandcamp.com/" target="_blank">Repetitor</a></li>
-          <li><a href=" https://prototip.bandcamp.com/" target="_blank">Prototip</a></li>
-          <li><a href=" https://johanbrauer.bandcamp.com/" target="_blank">Johanbrauer</a></li>
-          <li><a href=" https://vizeljbend.bandcamp.com/" target="_blank">Vizelj</a></li>
-          <li><a href=" https://koikoi.bandcamp.com/" target="_blank">Koikoi</a></li>
-          <li><a href=" https://sajzerbiterlemon.bandcamp.com/" target="_blank">Sajzerbiterlemon</a></li>
-          <li><a href=" https://gazorpazorp1.bandcamp.com/" target="_blank">Gazorpazorp</a></li>
-          <li><a href=" https://dogsinkavala.bandcamp.com/" target="_blank">Dogs in Kavala</a></li>
+          <li><a href="https://prototip.bandcamp.com/" target="_blank">Prototip</a></li>
+          <li><a href="https://johanbrauer.bandcamp.com/" target="_blank">Johanbrauer</a></li>
+          <li><a href="https://vizeljbend.bandcamp.com/" target="_blank">Vizelj</a></li>
+          <li><a href="https://koikoi.bandcamp.com/" target="_blank">Koikoi</a></li>
+          <li><a href="https://sajzerbiterlemon.bandcamp.com/" target="_blank">Sajzerbiterlemon</a></li>
+          <li><a href="https://gazorpazorp1.bandcamp.com/" target="_blank">Gazorpazorp</a></li>
+          <li><a href="https://dogsinkavala.bandcamp.com/" target="_blank">Dogs in Kavala</a></li>
         </ul>
         <p>Checkout Hali Gali <a href="https://www.youtube.com/watch?v=DkUVX2pKw2o" target="_blank">mockumentary</a> and <a href="https://haligali.bandcamp.com/releases" target="_blank">compilation</a>.</p>
       </article>
