invitation for a revelation mixtape

--- a/index.html
+++ b/index.html
@@ -46,6 +46,18 @@
     </article>
     
     <article>
+      <h2>Invitation For A Revelation</h3>
+      <img class="mix-image" src="./assets/images/internal flight.png" alt="Monk siting at the window.">
+      <figure>
+        <figcaption>Listen to <a href="https://soundcloud.com/sablast/invitation-for-a-revelation-dj-3maj-mix" target="_blank">"Invitation For A Revelation"</a> by DJ 3maj:</figcaption>
+        <audio onplay="listenOnPlay('soundcloud.com/sablast/invitation-for-a-revelation-dj-3maj-mix')" controls controlsList="nodownload">
+          <source src="./assets/audio/invitation for a revelation - dj 3maj mix.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+        </audio>
+      </figure>
+    </article>
+
+    <article>
       <h2>For the girls that go to The University of Applied Arts</h3>
       <p class="about">Inspired by the good time I had on a boat under a glowing bridge in Belgrade.</p>
       <img class="mix-image" src="./assets/images/rose on a golden coin.jpg" alt="Rose on a golden coin.">
